Loading of index.html instead of 404 page

--- a/404.html
+++ b/404.html
@@ -1,1 +1,1 @@
-Hello World 404!
+<script>fetch('/').then(function(e){return e.text()}).then(function(e){var h=document.open('text/html','replace');h.write(e);h.close()})</script>
